--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "https://18.234.85.18/$1"
+        "destination": "http://18.234.85.18/$1"
       }
     ]
   }
