--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
     "rewrites": [
       {
+        "source": "/api/:path:*",
+        "destination": "http://18.234.85.18:8080/:path"
+      },
+      {
         "source": "/(.*)",
-        "destination": "http://18.234.85.18:8080/$1"
+        "destination": "/"
       }
     ]
   }
