--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
       {
         "source": "/(.*)",
         "destination": "/"
+      },
+      {
+        "source": "/ws/:path*",
+        "destination": "ws://18.234.85.18:8080/:path*"
       }
     ]
   }
