--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       },
       {
         "source": "/ws/:path*",
-        "destination": "ws://18.234.85.18:8080/:path*"
+        "destination": "ws://18.234.85.18:8080/ws/:path*"
       }
     ]
   }
