--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,15 @@
       {
         "source": "/api/:path*",
         "destination": "http://18.234.85.18:8080/:path*"
+      }
+      ,
+      {
+        "source": "/wss/:path*",
+        "destination": "ws://18.234.85.18:8080/:path*"
       },
       {
         "source": "/(.*)",
         "destination": "/"
-      },
-      {
-        "source": "/ws/:path*",
-        "destination": "ws://18.234.85.18:8080/ws/:path*"
       }
     ]
   }
